z wybuildowanym czy cos nie jestem pewien czy dziala dobrze