@@ -1,3 +1,3 @@
 @echo off
-java -jar "Wypozyczalnia.jar" localhost 12345
+java --module-path "C:/Program Files/Java/javafx-sdk-21.0.1/lib" --add-modules javafx.controls,javafx.fxml -jar "Wypozyczalnia.jar" localhost 12345
 PAUSE
